see source code and the LICENSE file


2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Bug Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

25-Feb-2010 Christophe Demko
# Correcting integrity of #__asset table

24-Feb-2010 Jean-Marie Simonet
$ Allowing translation of plugin names in Plugin Manager

24-Feb-2010 Hannes Papenberg
^ Changed weblinks module to use weblinks category model and allowed enable/disable click tracking - Thanks Rob Clayburn!

24-Feb-2010 Christophe Demko
# Loading correctly language in com_config component
# Correcting some bugs in ConfigModelComponent
# Correcting some bugs in JControllerForm

21-Feb-2010 Jean-Marie Simonet
$ Small corrections for mod_article_news

23-Feb-2010 Hannes Papenberg
^ refactored mod_newsflash to mod_articles_news - Thanks Rob Clayburn!
+ Added option to enable/disable the weblink click-tracking - Thanks Rob Clayburn!
# Made usage of JHTML functions consistent - Thanks Jonnathan Lima!

23-Feb-2010 Christophe Demko
^ Changing call JHtmlSelect::* to self::* in JHtmlSelect class

23-Feb-2010 Sam Moffatt
# Fix for minor HTML bug in mysql and mysqli drivers

22-Feb-2010 Christophe Demko
# Reverting patch 14969 (introduce a bug). Change the way to load the template language ini
^ Changing call JLanguage::* to self::* in JLanguage class
# Adding the ability to specify a layout and a tmpl in the JControllerForm

21-Feb-2010 Mark Dexter
^ Make filter HTML consistent for back-end screens (Andrea Tarr)
^ Fix system tests to reflect HTML changes

21-Feb-2010 Jean-Marie Simonet
^$ Refactored com_weblinks ini/keys + some

21-Feb-2010 Christophe Demko
# Correcting a bug in component update
# Enabling ftp for installation extension
+ Adding administrator/manifests/files/index.html
