@@ -27,6 +27,9 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+26-Feb-2010 Jean-Marie Simonet
+^ Integrating default latin transliteration in framework
+
 25-Feb-2010 Christophe Demko
 # Correcting integrity of #__asset table
 
